force-app/main/default/objects/Channel_Member__c/Channel_Member__c.object-meta.xml
<CustomObject>
    <label>Channel Member</label>
    <nameField>
        <displayFormat>CMN-{0000000}</displayFormat>
        <label>Channel Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>