force-app/main/default/objects/Channel_Member__c/fields/Add_to_Channel__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Channel</label>
    <type>Checkbox</type>
</CustomField>