force-app/main/default/objects/Channel_Member__c/fields/Custom_Channel__c.field-meta.xml
<CustomField>
    <fullName>Custom_Channel__c</fullName>
    <label>Custom Channel</label>
    <referenceTo>Custom_Channel__c</referenceTo>
    <relationshipLabel>Channel Members</relationshipLabel>
    <relationshipName>Channel_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>