force-app/main/default/objects/Channel_Member__c/fields/Enriched_Fields__c.field-meta.xml
<CustomField>
    <fullName>Enriched_Fields__c</fullName>
    <inlineHelpText
  >Add the field API Names comma separated without space with maximum 10 fields</inlineHelpText>
    <label>Enriched Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>