force-app/main/default/objects/Channel_Member__c/fields/Filter_Expression__c.field-meta.xml
<CustomField>
    <fullName>Filter_Expression__c</fullName>
    <label>Filter Expression</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>