force-app/main/default/objects/Channel_Member__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>