force-app/main/default/objects/Channel_Member__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <externalId>true</externalId>
    <label>Member Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>